--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -78,6 +78,7 @@
 
                     onSubmit: function( filename, extension, uploadBtn, fileSize ) {
                         /// Bijvoorbeeld een overlay of een spinner starten...
+                        $("#overlay").fadeIn();
                         return(true);
                     },
 
@@ -88,12 +89,59 @@
                         } else {
 
                             $("#uploaded-file").val(response.file_id);
-                            $("#uploaded-image").attr("src", response.file_id);
+                            $("#uploaded-image").attr("src", "/"+response.file_id);
+                            $("#uploaded-cvfile").val(response.file_id);
+                            $("#uploaded-cv").attr("src", "/"+response.file_id);
+                            $("#overlay").fadeOut();
                         }
                     }
                 });
             });
         </script>
+        <script>
+            $(document).ready(function() {
+
+                let uploader = new ss.SimpleUpload({
+                    button: "uploadcv",
+                    url: "{{ path('upload_file') }}",
+                    name: 'file', // upload parameter name die gebruikt wordt in de controller
+                    responseType: 'json',
+                    allowedExtensions: ['png', 'jpg', 'jpeg', 'pdf'],
+                    hoverClass: 'hover-class-upload',
+                    focusClass: 'hover-class-upload',
+                    multiple: false,
+                    disabledClass: 'ui-state-disabled',
+                    autoSubmit: true,
+
+                    onSizeError: function() {
+                        alert('File may not exceed 100MB');
+                    },
+
+                    onExtError: function() {
+                        alert('Invalid file type. Please use a PNG, JPG or JPEG or PDF file');
+                    },
+
+                    onSubmit: function( filename, extension, uploadBtn, fileSize ) {
+                        /// Bijvoorbeeld een overlay of een spinner starten...
+                        return(true);
+                    },
+
+                    onComplete: function (filename, response) {
+
+                        if(response.success === false) {
+                            alert(response.errors);
+                        } else {
+
+                            $("#uploaded-cvfile").val(response.file_id);
+                            $("#uploaded-cv").attr("src", "/"+response.file_id);
+
+                        }
+                    }
+                });
+            });
+        </script>
+        
+
        
     </head>
     <body>        
