--- a/templates/user/applicant.html.twig
+++ b/templates/user/applicant.html.twig
@@ -9,7 +9,7 @@
                 <div class="medium-1 large-1"></div>
                 <div class="medium-7 large-7">
                     <br><div class="hexagonprofile">
-                        <img class="hexagonprofile-img" src="{{ profile.profilepictureurl }}">
+                        <img class="hexagonprofile-img" src="{{ asset( user.profilepictureurl ) }}"></img>
                     </div>
                 </div>
                 <div class="medium-4 large-4"></div>
@@ -88,9 +88,7 @@
             Hier komt het pdf symbool + bestandsnaam!
         </div>
 
-        <div class="small-6 medium-6 large-6 cell"> 
-            <span><button type="submit" id="_submit" name="_submit" class="btn btn-succes, right" style="font-family: bebas_neueregular; font-size: 3rem; color: #F15A24">Opslaan</i></button>
-            <button type="submit" id="_submit" name="_submit" class="btn btn-succes; right" style="font-size: 3rem; color: #F15A24; "><i class="fas fa-arrow-right"></i></button></span>
+        <div class="small-6 medium-6 large-6 cell">
         </div>
     <br>
     </div>
