--- a/templates/application/myapplicants.html.twig
+++ b/templates/application/myapplicants.html.twig
@@ -8,7 +8,7 @@
             <div class="box">
                 <div class="small-6 medium-6 large-6">
                     <br><div class="hexagon">
-                        <a href="/userprofile/show/{{user.id}}"><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
+                        <a href={{ path('show/userprofile', { "id": user.id } ) }}><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
                     </div>
                 </div>
                 <div class="small-3 medium-3 large-3"></div>
@@ -39,14 +39,14 @@
                     {% for applicant in applicants|sort((a, b) => a.applicationdate <=> b.applicationdate) %}
                         <tr>
                             <td>{{ applicant.applicationdate|date("d-m-Y") }}</td>
-                            <td><a href="/vacancy/show/{{applicant.vacancy.id}}" class="orangetext">{{ applicant.vacancy.function }}</a></td>
-                            <td><a href="/userprofile/show/{{applicant.user.id}}" class="greytext">{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</td>
+                            <td><a href={{ path('show/vacancy', { "id": applicant.vacancy.id } ) }} class="orangetext">{{ applicant.vacancy.function }}</a></td>
+                            <td><a href={{ path('show/userprofile', { "id": applicant.user.id } ) }} class="greytext">{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</td>
                             <td>{% if applicant.invited == false %}
-                            <a type="button" class="btn btn-success orangetext" <a href="application/invitation/{{applicant.id}}">
+                            <a type="button" class="btn btn-success orangetext" <a href={{ path('application_invitation', { "id": applicant.id }) }}>
                             Invite</a> 
 
                             {% else %}
-                            <a type="button" class="btn btn-success orangetext" <a href="application/invitation/{{applicant.id}}">
+                            <a type="button" class="btn btn-success orangetext" <a href={{ path('application_invitation', { "id": applicant.id }) }}>
                             Uninvite</a>
                             {% endif %}
                         </tr>
