--- a/templates/application/myapplications.html.twig
+++ b/templates/application/myapplications.html.twig
@@ -10,7 +10,7 @@
                 <div class="medium-8 large-8">
                     <br>
                         <div class="hexagonprofile">
-                            <a href="/userprofile/show/{{user.id}}"><img class="hexagonimages" src="{{ user.profilepictureurl }}"></a>
+                            <a href={{ path('show/userprofile', { "id": user.id } ) }}><img class="hexagonimages" src="{{ user.profilepictureurl }}"></a>
                         </div>
                     </br>
                 </div>
@@ -42,8 +42,8 @@
                     {% for application in applications|sort((a, b) => a.applicationdate <=> b.applicationdate) %}
                         <tr>
                             <td>{{ application.applicationdate|date("d-m-Y") }}</td>
-                            <td><a href="/vacancy/show/{{application.vacancy.id}}" class="orangetext">{{ application.vacancy.function}}</a></td>
-                            <td><a href="/userprofile/show/{{application.vacancy.user.id}}" class="greytext">{{ application.vacancy.user.companyname}}</a></td>
+                            <td><a href={{ path('show/vacancy', { "id": application.vacancy.id } ) }} class="orangetext">{{ application.vacancy.function}}</a></td>
+                            <td><a href={{ path('show/userprofile', { "id": application.vacancy.user.id } ) }} class="greytext">{{ application.vacancy.user.companyname}}</a></td>
                             <td class="orangetext">{% if application.invited == 1 %}
                                 <i class="fas fa-check" style=" font-size: 2.5rem"></i>
                             </td>                             
