--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -25,20 +25,20 @@
     {% for vacancy in vacancies %}
         <div class="cell small-12 medium-12 large-12"> 
             <div class="grid-x">
-                <div class="small-3 medium-3 large-3">
+                <div class="small-2 medium-2 large-3">
                     <br><br>
-                    <div class="hexagon-homepage">
+                    <div class="hexagon-homepage hide-for-small-only hide-for-medium-only">
                         <img class="icon-home" src="{{ vacancy.platform.iconurl }}" />
                     </div>
                 </div>
-                <div class="small-7 medium-7 large-7">
+                <div class="small-8 medium-8 large-7">
                     <br><br>
                     <div class="vacancydatetext">{{ vacancy.vacancydate }}</div>
-                        <a href="/vacancy/show/{{ vacancy.id }}" class="functiontext">{{vacancy.function}} voor {{vacancy.user.companyname}}</a>
+                        <a href={{ path('show/vacancy', { "id": vacancy.id } ) }} class="functiontext">{{vacancy.function}} voor {{vacancy.user.companyname}}</a>
                     <div class="descriptiontext">{{ vacancy.jobdescription |striptags|length > 300 ? vacancy.jobdescription|striptags|slice(0, 300) ~ '...' : vacancy.jobdescription|striptags }}</div>
                 </div>
                 <div class="small-2 medium-2 large-2 box">
-                    <a href="/vacancy/show/{{vacancy.id}}" class="arrowstyle"><i  class="fas fa-arrow-right"></i></a>
+                    <a href={{ path('show/vacancy', { "id": vacancy.id } ) }} class="arrowstyle"><i  class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
