--- a/templates/vacancy/addvacancy.html.twig
+++ b/templates/vacancy/addvacancy.html.twig
@@ -7,7 +7,7 @@
         <div class="medium-12 large-12">
             <div class="box">
                 <div class="small-8 medium-8 large-8">
-                <br><a href="/userprofile/show/{{user.id}}"><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
+                <br><a href={{ path('show/userprofile', { "id": user.id } ) }}><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
                 </div>
                 <div class="small-4 medium-4 large-4">
                 </div>
@@ -18,7 +18,7 @@
 
             
 {% block content %}
-    <form action="/vacancy/save/" method="POST">
+    <form action="{{ path('save/vacancy') }}" method="POST">
         <input type="hidden" name="id" value="{{ user.id }}">
             <div class="grid-x grid-padding-x">
                 <div class="small-12 medium-12 large-12 cell">
