--- a/templates/vacancy/editvacancy.html.twig
+++ b/templates/vacancy/editvacancy.html.twig
@@ -7,7 +7,7 @@
         <div class="medium-12 large-12 cell">
             <div class="box">
                 <div class="medium-8 large-8">
-                <br><a href="/userprofile/show/{{vacancy.user.id}}"><img class="companyimg" src="{{ vacancy.user.profilepictureurl }}"></a>
+                <br><a href={{ path('show/userprofile', { "id": user.id } ) }}><img class="companyimg" src="{{ vacancy.user.profilepictureurl }}"></a>
                 </div>
                 <div class="medium-4 large-4">
                 </div>
@@ -18,7 +18,7 @@
 
             
 {% block content %}
-    <form action="/vacancy/update/{{ vacancy.id }}" method="POST">
+    <form action="{{ path('update/vacancy', { "id": vacancy.id } ) }}" method="POST">
         <input type="hidden" name="id" value="{{ user.id }}">
             <div class="grid-x grid-padding-x">
                 <div class="small-12 medium-12 large-12 cell">
