--- a/templates/vacancy/employervacancies.html.twig
+++ b/templates/vacancy/employervacancies.html.twig
@@ -7,7 +7,7 @@
         <div class="medium-12 large-12">
             <div class="box">
                 <div class="small-8 medium-8 large-8">
-                    <br><a href="/userprofile/show/{{user.id}}"><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
+                    <br><a href={{ path('show/userprofile', { "id": user.id } ) }}><img class="companyimg" src="{{ user.profilepictureurl }}"></a>
                 </div>
                 <div class="small-4 medium-4 large-4"></div>
             </div>
@@ -34,8 +34,8 @@
                     {% for vacancy in vacancies %}
                         <tr>
                             <td>{{ vacancy.vacancydate|date("d-m-Y") }}</td>
-                            <td><a href="/vacancy/show/{{vacancy.id}}" class="orangetext">{{ vacancy.function }}</a></td> 
-                            <td><a href="/userprofile/show/{{vacancy.user.id}}" class="greytext">{{ vacancy.user.companyname}}</a></td>
+                            <td><a href={{ path('show/vacancy', { "id": vacancy.id } ) }} class="orangetext">{{ vacancy.function }}</a></td> 
+                            <td><a href={{ path('show/userprofile', { "id": vacancy.user.id } ) }} class="greytext">{{ vacancy.user.companyname}}</a></td>
                             <td>{{ vacancy.location}}</td>
                             <td>{{ vacancy.level }}</td>
                             <td>{{ vacancy.platform.name}}</td>
