--- a/templates/vacancy/showvacancy.html.twig
+++ b/templates/vacancy/showvacancy.html.twig
@@ -20,7 +20,7 @@
         <div class="medium-12 large-12 cell">
             <div class="box">
                 <div class="medium-6 large-6">
-                <br><br><a href="/userprofile/show/{{vacancy.user.id}}"><img class="companyimg" src="{{ vacancy.user.profilepictureurl }}"></a>
+                <br><br><a href={{ path('show/userprofile', { "id": vacancy.user.id } ) }}><img class="companyimg" src="{{ vacancy.user.profilepictureurl }}"></a>
                 </div>
                 <div class="medium-6 large-6">
                 </div>
@@ -121,7 +121,7 @@
                                 {% for applicant in applicants %}
                                     <tr>
                                         <td>{{ applicant.applicationdate|date("d-m-Y") }}</td>
-                                        <td><a href="/userprofile/show/{{applicant.user.id}}" class="orangetext">{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</a></td>
+                                        <td><a href={{ path('show/userprofile', { "id": applicant.user.id } ) }} class="orangetext">{{ applicant.user.lastname}}, {{ applicant.user.firstname}}</a></td>
                                         <td>{{ applicant.user.email }}</td>
                                         <td class="centertable">{% if applicant.invited == true %}
                                             <i class="fas fa-check" style="font-size: 2rem"></i></td>
