--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="{{ asset('assets/css/vacancypage.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/myapplicationspage.css')}}">
         <link rel="stylesheet" href="{{ asset('assets/css/profile.css')}}">
+        <link rel="stylesheet" href="{{ asset('assets/css/admin.css')}}">
         
         {% endblock %}
     
