--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -24,14 +24,14 @@
 <div class="grid-x">  
     {% for vacancy in vacancies %}
         <div class="cell small-12 medium-12 large-12"> 
-            <div class="grid-x">
-                <div class="small-2 medium-2 large-3">
+            <div class="grid-x grid-padding-x">
+                <div class="small-2 medium-2 large-2 cell" style="background-color: blue">
                     <br><br>
                     <div class="hexagon-homepage hide-for-small-only hide-for-medium-only">
                         <img class="icon-home" src="{{ vacancy.platform.iconurl }}" />
                     </div>
                 </div>
-                <div class="small-8 medium-8 large-7">
+                <div class="small-8 medium-8 large-8 cell" style="background-color: green">
                     <br><br>
                     <div class="vacancydatetext">{{ vacancy.vacancydate }}</div>
                         <a href={{ path('show/vacancy', { "id": vacancy.id } ) }} class="functiontext">{{vacancy.function}} voor {{vacancy.user.companyname}}</a>
