--- a/templates/user/applicant.html.twig
+++ b/templates/user/applicant.html.twig
@@ -95,6 +95,12 @@
         </div>
 
         <div class="small-6 medium-6 large-6 cell">
+            {% if is_granted("ROLE_ADMIN") %}
+                <button type="submit" id="_submit" name="_submit" class="btn btn-succes"  style="float: right" >
+                    <a href={{ path('remove/userprofile', {"id": profile.id }) }} class="orangetext-remove-admin">
+                    <i class="fas fa-arrow-right"></i>  Gebruiker Verwijderen</a>
+                </button><br>
+            {% endif %}
         </div>
     <br>
     </div>
