--- a/templates/global/header.html.twig
+++ b/templates/global/header.html.twig
@@ -19,7 +19,7 @@
                         <li><a href={{ path('admin/users') }}  class="menu-colors">Gebruikers</a></li>
                         <li><a href={{ path('admin/vacancies') }}  class="menu-colors">Vacatures</a></li>
                         <li><a href={{ path('admin/applications') }} class="menu-colors">Sollicitaties</a></li>
-                        <li><a href="/" class="menu-colors">Platforms</a></li>
+                        <li><a href={{ path('admin/platforms') }} class="menu-colors">Platforms</a></li>
                     {% endif %}
                         <li><a href={{ path('fos_user_security_logout') }} class="menu-colors">Uitloggen</a></li>
             {% else %}
