--- a/templates/base-homepage.html.twig
+++ b/templates/base-homepage.html.twig
@@ -96,11 +96,11 @@
       
             <div class="orangebackground">
                 <div class="grid-x">
-                    <div class="large-4 cell box hide-for-small-only hide-for-medium-only">
+                    <div class="large-4 cell hide-for-small-only hide-for-medium-only">
                         {% block vegas %}
                         {% endblock %}
                     </div>
-                    <div class="small-12 medium-12 large-8 cell box">
+                    <div class="small-12 medium-12 large-8 cell">
                         {% block content %}
                         {% endblock %}
                     </div>
