--- a/public/assets/css/homepage.css
+++ b/public/assets/css/homepage.css
@@ -47,8 +47,8 @@
 .hexagon-homepage{
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
     background-color:black;
-    width: 175px;
-    height: 175px;
+    width: 100%;
+    height: auto;
     display: flex; 
     flex-direction: column;
     justify-content: center;
@@ -60,8 +60,8 @@
 /* https://stackoverflow.com/questions/11978231/vertically-center-two-elements-within-a-div/31977476#31977476 */
 
 .icon-home{
-    width: 150px;
-    height: 150px;
+    width: 100%;
+    height: auto;
     display: block;
     margin: auto;
     background-color: white;
@@ -104,7 +104,7 @@
 
 .mainheader{
     background-color: black;
-    width: 400px;
+    width: 350px;
     height: 55px;
     color: white;
     font-family: 'bebas_neueregular';
