--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -99,34 +99,35 @@
 
 .hexagonprofile{
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-    background-color: white;
     width: 100%;
+    max-width: 175px;
     height: auto;
+    max-height: 175px;
     display: flex; 
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: -1;
+    z-index: 1;    
 }
 
 .hexagonprofile-img{
     width: 100%;
-    height: auto;
     display: block;
     margin: auto;
-    background-color:black;
-    border: white;
-    border-top: white;
-    border-bottom: white;
-    border-left: white;
-    border-right: white;
-    box-shadow: white;;
+    background-color: white;
+    overflow: hidden;
+}
+
+.hexagonprofile-img:after{
+    display: block;
+    padding-bottom: 100%;
 }
 
 .companyimg{
-    width: 80%;
+    width: 50%;
     height: auto;
-    display: flex; 
+    display: block; 
+    margin: auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
