--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -25,20 +25,24 @@
     {% for vacancy in vacancies %}
         <div class="cell small-12 medium-12 large-12"> 
             <div class="grid-x grid-padding-x">
-                <div class="small-2 medium-2 large-3 cell">
-                    <br><br>
-                    <div class="hexagon-homepage hide-for-small-only hide-for-medium-only">
-                        <img class="icon-home" src="{{ vacancy.platform.iconurl }}" />
+                <div class="box">
+                    <div class="medium-3 large-3 cell">
+                        <br><br>
+                        <div class="hexagon-homepage hide-for-small-only">
+                            <img class="icon-home" src="{{ vacancy.platform.iconurl }}" />
+                        </div>
                     </div>
                 </div>
-                <div class="small-8 medium-8 large-7 cell">
+                <div class="small-10 medium-8 large-8 cell">
                     <br><br>
                     <div class="vacancydatetext">{{ vacancy.vacancydate }}</div>
                         <a href={{ path('show/vacancy', { "id": vacancy.id } ) }} class="functiontext">{{vacancy.function}} voor {{vacancy.user.companyname}}</a>
                     <div class="descriptiontext">{{ vacancy.jobdescription |striptags|length > 300 ? vacancy.jobdescription|striptags|slice(0, 300) ~ '...' : vacancy.jobdescription|striptags }}</div>
                 </div>
-                <div class="small-2 medium-2 large-2 box">
-                    <a href={{ path('show/vacancy', { "id": vacancy.id } ) }} class="arrowstyle"><i  class="fas fa-arrow-right"></i></a>
+                <div class="small-2 medium-1 large-1 cell">
+                    <div class="box">
+                        <a href={{ path('show/vacancy', { "id": vacancy.id } ) }} class="arrowstyle"><i  class="fas fa-arrow-right"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
