--- a/templates/user/applicant.html.twig
+++ b/templates/user/applicant.html.twig
@@ -3,16 +3,17 @@
 {% block title %}{{ profile.lastname }}, {{ profile.firstname|first }} {% endblock %}
 
 {% block logo %}
-    <div class="grid-x grid-padding-x hide-for-small-only hide-for-medium-only">
+    <div class="grid-x hide-for-small-only hide-for-medium-only">
         <div class="medium-12 large-12">
             <div class="box">
-                <div class="medium-1 large-1"></div>
-                <div class="medium-7 large-7">
-                    <br><div class="hexagonprofile">
-                        <img class="hexagonprofile-img" src="{{ asset( user.profilepictureurl ) }}"></img>
+                <div class="medium-9 large-9">
+                     <br><br><div class="box">
+                        <div class="hexagonprofile">
+                            <img class="hexagonprofile-img" src="{{ asset( profile.profilepictureurl ) }}"></img>
+                        </div>
                     </div>
                 </div>
-                <div class="medium-4 large-4"></div>
+                <div class="medium-3 large-3"></div>
             </div>
         </div>
     </div>
