--- a/templates/global/footer.html.twig
+++ b/templates/global/footer.html.twig
@@ -1,22 +1,31 @@
 {% block footer %}
-    
     <div class="small-12 medium-12 large-12">
         <div class="triangle-footer triangle-footer-homepage">
         </div>
     </div>
    
     <div class="grid-x">
-        <div class="small-6 medium-3 large-3">
+        <div class="small-6 medium-4 large-4 ">
             <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="logo-footer"></a>
         </div>
     
-        <div class="small-6 medium-2 large-2">
+        <div class="small-6 hide-for-medium">
             <br><span class="footer-header">Adres</span><br>
+            <span class="footer-text">Poststraat 2B<br>6135 KR, Sittard</span>
+
+            <br>
+
+            <br><span class="footer-header">Privacy</span><br>
+            <span class="footer-text">Lorem ipsum dolor sit amet,<br>consectetur</span>
+        </div>
+
+        <div class="medium-4 large-4 hide-for-small-only">
+            <br><br><span class="footer-header">Adres</span><br>
             <span class="footer-text">Poststraat 2B<br>6135 KR, Sittard</span>
         </div>
 
-        <div class="small-6 medium-2 large-2">    
-            <br><span class="footer-header">Privacy</span><br>
+        <div class="medium-4 large-4 hide-for-small-only">
+            <br><br><span class="footer-header">Privacy</span><br>
             <span class="footer-text">Lorem ipsum dolor sit amet,<br>consectetur</span>
         </div>
     </div>
