--- a/public/assets/css/foundation.css
+++ b/public/assets/css/foundation.css
@@ -3688,16 +3688,18 @@ select {
   display: none; }
 
 .menu-icon {
-  position: relative;
+  position: absolute;
+  right: 50px;
+  top: 50px;
   display: inline-block;
   vertical-align: center;
-  width: 100px;
-  height: 60px;
+  width: 50px;
+  height: 25px;
   cursor: pointer; }
   .menu-icon::after {
     position: absolute;
     top: 0px;
-    left: 0px;;
+    left: 0px;
     display: block;
     width: 100%;
     height: 8px;
