--- a/templates/global/header.html.twig
+++ b/templates/global/header.html.twig
@@ -1,121 +1,45 @@
 {% block header %}
-<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="large">
-  <button class="menu-icon" type="button" data-toggle="example-menu"></button>
-  <div class="title-bar-title">Menu</div>
-</div>
-
-<div class="top-bar" id="example-menu">
-  <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu>
-      <li class="menu-text">Site Title</li>
-      <li class="has-submenu">
-        <a href="#0">One</a>
-        <ul class="submenu menu vertical" data-submenu>
-          <li><a href="#0">One</a></li>
-          <li><a href="#0">Two</a></li>
-          <li><a href="#0">Three</a></li>
-        </ul>
-      </li>
-      <li><a href="#0">Two</a></li>
-      <li><a href="#0">Three</a></li>
-    </ul>
-  </div>
-  <div class="top-bar-right">
-    <ul class="menu">
-      <li><input type="search" placeholder="Search"></li>
-      <li><button type="button" class="button">Search</button></li>
-    </ul>
-  </div>
-</div>
-
-<div class="row demo-toggle-title">
-  <div class="columns">
-    <h2>Topbar with Responsive Toggle</h2>
-    <p>In the above example, we've combined the above pattern with the Responsive Toggler plugin, creating a responsive top bar with a toggle click trigger on mobile.</p>
-    <div class="primary callout show-for-medium">
-      <p>Scale your browser down to see the toggle happen.</p>
+  <div class="top-bar">
+    <div class="top-bar-title">
+      <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
+        <button class="menu-icon" type="button" data-toggle></button>
+      </span>
     </div>
-  </div>
-</div>
-{% endblock %}
 
-{# {% block header %}
-<div class="top-bar header" id="responsive-menu">
     <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu>
       <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="headerlogo"></a>  
-    </ul>
     </div>
-    <div class="top-bar-right">
-        <ul class="vertical medium-horizontal menu" data-responsive-menu="dropdown">
-        {% if app.user is defined and app.user != NULL %}
-                <li><a href="/userprofile/edit/{{app.user.id}}" class="menu-colors">Mijn Profiel</a></li>
-                    {% if is_granted('ROLE_CANDIDATE') %}
-                        <li><a href={{ path('myapplications') }} class="menu-colors">Mijn sollicitaties</a></li>
-                        <li><a href={{ path('althomepage_vacancies') }} class="menu-colors">Alle Vacatures</a></li>
-                    {% elseif is_granted('ROLE_EMPLOYER') %}  
-                        <li><a href={{ path('myvacancies') }} class="menu-colors">Mijn vacatures</a></li>  
-                        <li><a href={{ path('myapplications') }} class="menu-colors">Mijn sollicitanten</a></li>
-                    {% else %}
-                        <li><a href={{ path('admin/users') }}  class="menu-colors">Gebruikers</a></li>
-                        <li><a href={{ path('admin/vacancies') }}  class="menu-colors">Vacatures</a></li>
-                        <li><a href={{ path('admin/applications') }} class="menu-colors">Sollicitaties</a></li>
-                        <li><a href={{ path('admin/platforms') }} class="menu-colors">Platforms</a></li>
-                    {% endif %}
-                        <li><a href={{ path('fos_user_security_logout') }} class="menu-colors">Uitloggen</a></li>
-            {% else %}
-                <li><a href={{ path('althomepage_vacancies') }} class="menu-colors">Alle Vacatures</a></li>
-                <li><a href={{ path('fos_user_registration_register') }} class="menu-colors">Registreren</a></li>
-                <li><a href={{ path('fos_user_security_login') }} class="menu-colors">Login</a></li>
-        {% endif %}
+
+    <div id="responsive-menu">
+      <div class="top-bar-right">
+        <ul class="dropdown menu" data-dropdown-menu>
+          {% if app.user is defined and app.user != NULL %}
+            <li><a href="/userprofile/edit/{{app.user.id}}" class="menu-colors">Mijn Profiel</a></li>
+                {% if is_granted('ROLE_CANDIDATE') %}
+                    <li><a href={{ path('myapplications') }} class="menu-colors">Mijn sollicitaties</a></li>
+                    <li><a href={{ path('althomepage_vacancies') }} class="menu-colors">Alle Vacatures</a></li>
+                {% elseif is_granted('ROLE_EMPLOYER') %}  
+                    <li><a href={{ path('myvacancies') }} class="menu-colors">Mijn vacatures</a></li>  
+                    <li><a href={{ path('myapplications') }} class="menu-colors">Mijn sollicitanten</a></li>
+                {% else %}
+                    <li><a href={{ path('admin/users') }}  class="menu-colors">Gebruikers</a></li>
+                    <li><a href={{ path('admin/vacancies') }}  class="menu-colors">Vacatures</a></li>
+                    <li><a href={{ path('admin/applications') }} class="menu-colors">Sollicitaties</a></li>
+                    <li><a href={{ path('admin/platforms') }} class="menu-colors">Platforms</a></li>
+                {% endif %}
+                    <li><a href={{ path('fos_user_security_logout') }} class="menu-colors">Uitloggen</a></li>
+          {% else %}
+            <li><a href={{ path('althomepage_vacancies') }} class="menu-colors">Alle Vacatures</a></li>
+            <li><a href={{ path('fos_user_registration_register') }} class="menu-colors">Registreren</a></li>
+            <li><a href={{ path('fos_user_security_login') }} class="menu-colors">Login</a></li>
+          {% endif %}
         </ul>
+      </div>
     </div>
-</div>
+  </div>
 
 <div class="small-12 medium-12 large-12">
   <div class="triangle triangle-homepage">
   </div>
 </div>
-{% endblock %} #}
-
-{# <div class="top-bar">
-    <div clas="top-bar-title">
-        <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-            <button class="menu-icon" type="button" data-toggle></button>
-        </span>
-        <strong>Site Title</strong>
-    </div>
-    <div id="responsive-menu">
-        <div class="top-bar-left">
-            <ul class="dropdown menu" data-dropdown-menu>
-                <li><a href="#">One</a></li>
-                <li><a href="#">Two</a></li>
-                <li><a href="#">Three</a></li>
-            </ul>
-        </div>
-        <div class="top-bar-right">
-            <ul class="menu">
-                <li><input type="search" placeholder="Search"></li>
-                <li><button type="button" class="button">Search</button></li>
-            </ul>
-        </div>
-    </div>
-</div> #}
-
-{# <div class="top-bar">
-    <div class="top-bar-left">     
-        <a href="/"><img src="{{ asset('assets/logo/vacit-logo-white.png')}}" class="headerlogo"></a>  
-    </div>   
-    <div class="top-bar-right">
-        <span data-responsive-toggle="responsive-menu" data-hide-for="medium">
-            <button class="menu-icon" type="button" data-toggle></button>
-        </span>  
-        <div id="responsive-menu">
-            <ul class="vertical medium-horizontal dropdown menu" data-dropdown-menu>
-                <li><a href="#" class="menu-colors">Mijn Profiel</a></li>
-                <li><a href="#" class="menu-colors">Mijn Sollicitaties</a></li>
-                <li><a href="#" class="menu-colors">Logout</a></li>
-            </ul>
-        </div>
-    </div>
-</div>  #}
+{% endblock %}
